force-app/main/default/objects/OpportunityLineItem/fields/Commission_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Commission_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Agreement</label>
    <referenceTo>Commission_Agreement__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>