force-app/main/default/objects/OpportunityLineItem/fields/IsNewBusiness__c.field-meta.xml
<CustomField>
    <fullName>IsNewBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNewBusiness</label>
    <type>Checkbox</type>
</CustomField>